--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* General */
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +6,62 @@
 }
 
 body {
-  background-color: cadetblue;
-  color: white
+  background-color: #5a88a2;
+  color: #2C3333;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+.container {
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.btn {
+  cursor: pointer;
+}
+
+.box {
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px 20px;
+}
+
+/* Header */
+header {
+  background-color: #2C3333;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90px;
+}
+
+nav input {
+  width: 80px;
+}
+
+#gen-num {
+  cursor: pointer;
+}
+
+/* Main  */
+.cells-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 200px;
+  margin-top: 300px;
+}
+
+.num-cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 10px;
+  width: 60px;
+  height: 60px;
 }
