--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,16 +44,19 @@ nav input {
   width: 80px;
 }
 
-#gen-num {
-  cursor: pointer;
+/* Main  */
+h2 {
+  color: white;
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 150px;
 }
 
-/* Main  */
 .cells-container {
   display: flex;
   justify-content: space-between;
   padding: 0 200px;
-  margin-top: 300px;
+  margin-top: 100px;
 }
 
 .num-cell {
@@ -64,4 +67,25 @@ nav input {
   border-radius: 10px;
   width: 60px;
   height: 60px;
+}
+
+.num-cell input {
+  width: 80%;
+  height: 80%;
+  text-align: center;
+  border:0;
+  font-size: 1.2rem;
+}
+
+.check {
+  margin-top: 100px;
+  text-align: center;
+}
+
+.hide {
+  display: none;
+}
+
+.hide2 {
+  opacity: 0;
 }
